--- a/styles/globals.css
+++ b/styles/globals.css
@@ -155,3 +155,12 @@
 .social-media a:hover .tooltip-social {
   opacity: 1;
 }
+@keyframes float {
+  0% { transform: translateY(0px); }
+  50% { transform: translateY(-15px); }
+  100% { transform: translateY(0px); }
+}
+
+.animate-float {
+  animation: float 6s ease-in-out infinite;
+}
